--- a/app/src/main/res/menu/member_only.xml
+++ b/app/src/main/res/menu/member_only.xml
@@ -13,6 +13,9 @@
         <item
             android:id="@+id/nav_chatroom"
             android:title="Chat Room" />
+        <item
+            android:id="@+id/nav_admin"
+            android:title="Admin Panel"/>
     </group>
     
 </menu>
