--- a/app/src/main/res/layout/activity_make_posts.xml
+++ b/app/src/main/res/layout/activity_make_posts.xml
@@ -34,5 +34,10 @@
         android:layout_height="wrap_content"
         android:text="MemberShip"
         android:id="@+id/btn_membership"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add Admin Users"
+        android:id="@+id/btn_adminUser"/>
 
 </LinearLayout>
