--- a/app/src/main/res/layout/activity_signotification.xml
+++ b/app/src/main/res/layout/activity_signotification.xml
@@ -29,6 +29,12 @@
 
 </LinearLayout>
 
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
